# IT3180E-SE-Search-Module

./: .gitignore  .pre-commit-config.yaml  =4.1.1  Dockerfile  IT3180E SE.drawio  README.md  Search_module_fix.py  app.py  database.py  dp_operations.ipynb  embedding_model.py  log-connect-successfully.txt  pdf_handler.ipynb  pdf_handler.py  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_nodeps.txt  setup.cfg  setup.py  tox.ini  youtube_handler.ipynb  youtube_handler.py
.github/workflows/: docker-image.yml  tests.yml
add_document/: pdf_handler.py  youtube_handler.py
onnx_model/: config.json
src/search_module/: app.py
src/search_module/utilities/: database.py  db_helper.py  pdf.py  youtube.py
tests/: test_app.py
utilities/: database.py  pdf.py  pdf_handler.py  youtube.py  youtube_handler.py
vector_storage/: chroma.sqlite3
