[metadata]
name = search_module
description = semantic and word search
author = team
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers = 
    Programing Language :: Python :: 3
    Programing Language :: Python :: 3 :: Only
    Programing Language :: Python :: 3.6
    Programing Language :: Python :: 3.7
    Programing Language :: Python :: 3.8
    Programing Language :: Python :: 3.9

[options]
packages = search_module
install_requires = 
    requests>=2
python_requires = >=3.6
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
utilities = py.typed

[flake8]
max-line-length = 160